Tue, 10 May 2005, Amos Anderson
1. Committed my code for a streaming version of QMCFunction with all necessary correlary changes.
   This modification actually makes the code a little bit faster -- more so with more walkers.
   This also adds a new macro WALKERS_PER_PASS.

2. I added some QMcBeaver compiling discussion to beaver.tex. I also cleared up some citations.

3. I replaced QMcPlot1.py and QMcPlot2.py with PlotQMc1.py and PlotQMc2.py so the first couple
   characters is not the same as the executables.

4. Made a couple minor changes to the make system. configure.py will accept a TAG argument, necessary
   for 'make updateall', which performs a batch build for all exec's sharing the TAG. I chose this
   instead of the compiler name because many different processors have GCC.

Mon, 2 Apr 2005, Chip Kent

1. Rewrote configure.py to make it easier to maintain and extend.  

2. Made changes necessary to support PGI and Intel compilers.

3. Made changes to remove all warnings about using deprecated STL
   code.

Sat, 12 Mar 2005, Daniel R. Fisher

1.  I moved the (lnJ == 0) check in QMCReadAndEvaluateConfigs from after the 
    local energy and logweight are calculated to after the config is read from
    the file.  This keeps the extra configs from being evaluated. 

Fri, 11 Mar 2005, Daniel R. Fisher

1.  Fixed the jaguar2qmcbeaver.py script.  It was not printing the CI coefficients, so they were
    being initialized with garbage values.

2.  Made some of the arrays in QMCDansWalkerInitialization static.  This makes the initialization
    faster.

3.  Added the capability to calculate the expectation values of the basis functions.  To do this,
    set the calculate_bf_density flag to 1.

Tues, 8 Mar 2005, Amos Anderson
1.  I upgraded Stopwatch.h so it now uses Microsoft's high precision QueryPerformanceCounter and
	QueryPerformanceFrequency timing functions. The precision is now at the 1 ms resolution when