@@ -1,3 +1,12 @@
+Thurs, 23 June 2005, Daniel R. Fisher
+1. Changed the criterion in QMCEquilibrationArray for determining the 
+   equilibration length from the serially decorrelated standard deviation to an
+   objective function involving the expectation value of the energy, its 
+   serially correlated variance, and the number of samples.
+
+2. Fixed a problem in QMCDansWalkerInitialization which was sometimes causing
+   uneven distributions of electrons.
+
 Tue, 10 May 2005, Amos Anderson
 1. Committed my code for a streaming version of QMCFunction with all necessary correlary changes.
    This modification actually makes the code a little bit faster -- more so with more walkers.
